# sdl3-triangle-revisited

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.org  cmake_install.cmake  flake.nix
.cmake/api/v1/reply/: index-2026-04-13T16-34-33-0857.json
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: m5dr0w2wb9lca77ar3idab31szd6mix7-source  nn000ah717xj9rbz1w8bgvdxiy7842sn-source
src/: Makefile  cmake_install.cmake
src/triangle/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
